--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
         <section class="pic">
             <div class="pich-item">
                 <div class="pic-info">
-                <img src="https://scontent.fbkk6-1.fna.fbcdn.net/v/t39.30808-6/472899020_622156743638265_2410734035065347319_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeFEI6xBd80YW60z6UAL14plZp7CNQsGjMtmnsI1CwaMy4xnM3M0hqQElsyy08uQ-vHn8bgAS84vQWFmwe1XznGO&_nc_ohc=4WVIFbPBWogQ7kNvgHsP8A8&_nc_oc=AdhQAfMlRb0MYUvoqDDjTZqWvpMjJyJGxCJQ66vtjWBoD6-SOefsnj422GJ8evcYlSc&_nc_zt=23&_nc_ht=scontent.fbkk6-1.fna&_nc_gid=AOgBKJ18WfOrGCGpnQvYfZc&oh=00_AYAtTVq_fQ687in42tJ4_wEQhC2XhGbpSJKXnzUIMGgiWQ&oe=678D2BDB"alt="pich">
+                 < img src="https://scontent.fkkc1-1.fna.fbcdn.net/v/t39.30808-6/472899020_622156743638265_2410734035065347319_n.jpg?stp=dst-jpg_s206x206_tt6&_nc_cat=102&ccb=1-7&_nc_sid=fe5ecc&_nc_eui2=AeFEI6xBd80YW60z6UAL14plZp7CNQsGjMtmnsI1CwaMy4xnM3M0hqQElsyy08uQ-vHn8bgAS84vQWFmwe1XznGO&_nc_ohc=3y1E5gU8sUgQ7kNvgHmlG8f&_nc_oc=Adgg5C-1aKljVP1FrFs4WUjn_NXlAqmRlJ7IzXjVEybEY6n3INLro951NjxGepktITw&_nc_zt=23&_nc_ht=scontent.fkkc1-1.fna&_nc_gid=AYyPgiySi3XAe3pxU0R4fne&oh=00_AYBgZ3Hmv-ilrhjsPsElhsO0vSfZIWw8dZPQTxZTmRSWnw&oe=6798D11B"alt="pic">
                 <p>Sukanya Bunwichian</p>
                 <p>ชั้นมัธยมศึกษาปีที่ 4/7</p>
                 <p>โรงเรียนศรีธาตุพิทยาคม</p>
