--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="container">
             <div class="nav-con">
                 <div class="logo">
-                    <a href="#">logo</a>
+                    <a href="index.html"><img src="img/Logo (2).png" alt="nurse" width="150px"></a>
                 </div>       
                 
                 <ul class="menu">
                     <li><a href="Home.html">home</a></li> 
                     <li><a href="profile.html">profile</a></li> 
                     <li><a href="education.html">education</a></li> 
-                    <li><a href="certification.html">certification</a></li> 
+                    <li><a href="certificate.html">certification</a></li> 
                     <li><a href="activities.html">activities</a></li> 
                     <li><a href="contact.html">contact</a></li> 
                     
