--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,6 +15,7 @@
                 <div class="logo">
                     <a href="index.html"><img src="img/Logo (2).png" alt="nurse" width="150px"></a>
                 </div>
+                
                 <ul class="menu"align="center">
                     <li><a href="home.html"><img src="img/home icon.png" alt="home"  width="40px"><br></a>home<br></li> 
                     <li><a href="profile.html"><img src="img/pro icon.png" alt="profile"  width="40px"><br>profile</a></li> 
@@ -26,6 +27,7 @@
             </div>
         </div>
     </nav>
+    
     <div align="center">
         <img src="img/Home.png" width="1567" height="1000">
     </div>       
