--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>       
                 
                 <ul class="menu">
-                    <li><a href="Home.html">home</a></li> 
+                    <li><a href="home.html">home</a></li> 
                     <li><a href="profile.html">profile</a></li> 
                     <li><a href="education.html">education</a></li> 
                     <li><a href="certificate.html">certification</a></li> 
