--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -29,6 +29,9 @@
     </nav>
     <div align="center">
         <img src="img/Cantace.png" width="1567" height="1000" >
+    </div>
+    <div align="center">
+        <img src="img/Contace1.png" width="1567" height="1000" >
     </div>
 </body>
 </html>
